@@ -523,8 +523,8 @@ Disassembly of section .text:
 0[0-9a-f]+ <[^>]+> e9c5 2300 	strd	r2, r3, \[r5\]
 0[0-9a-f]+ <[^>]+> e9c5 230c 	strd	r2, r3, \[r5, #48\]
 0[0-9a-f]+ <[^>]+> e945 230c 	strd	r2, r3, \[r5, #-48\]
-0[0-9a-f]+ <[^>]+> f835 1e00 	ldrht	r1, \[r5\]
-0[0-9a-f]+ <[^>]+> f835 1e30 	ldrht	r1, \[r5, #48\]
+0[0-9a-f]+ <[^>]+> f815 1e00 	ldrbt	r1, \[r5\]
+0[0-9a-f]+ <[^>]+> f815 1e30 	ldrbt	r1, \[r5, #48\]
 0[0-9a-f]+ <[^>]+> f915 1e00 	ldrsbt	r1, \[r5\]
 0[0-9a-f]+ <[^>]+> f915 1e30 	ldrsbt	r1, \[r5, #48\]
 0[0-9a-f]+ <[^>]+> f835 1e00 	ldrht	r1, \[r5\]
