@@ -1,3 +1,7 @@
+2006-03-21  Paul Brook  <paul@codesourcery.com>
+
+	* config/tc-arm.c (insns): Correct opcodes for ldrbt and strbt.
+
 2006-03-20  Paul Brook  <paul@codesourcery.com>
 
 	* config/tc-arm.c (BAD_BRANCH, BAD_NOT_IT): Define.
